added states controller and model, only methods needed to work with users model at this time
