# api/api.yaml
@@ -16,6 +16,7 @@ servers:
 tags:
   - name: Users
   - name: Cities
+  - name: States
 paths:
   /users:
     get:
@@ -243,20 +244,68 @@ paths:
           schema:
             type: number
       x-swagger-router-controller: 'Cities' 
+  /states:
+    get:
+      tags:
+        - States
+      description: Returns all states
+      operationId: getStates
+      responses:
+        '200':
+          description: A list of states.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/State'
+      x-swagger-router-controller: 'States' 
+  /states/{id}:
+    get:
+      tags:
+        - States
+      description: Returns a state by id
+      operationId: getStateById
+      responses:
+        '200':
+          description: A state.
+          content:
+            application/json:
+              schema:
+                  type: object
+                  required:
+                    - id
+      parameters:
+        - in: path
+          name: id
+          description: states's id
+          required: true
           schema:
             type: number
-        - $ref: '#/components/parameters/user_firstNameParam'
-        - $ref: '#/components/parameters/user_middleNameParam'
-        - $ref: '#/components/parameters/user_lastNameParam'
-        - $ref: '#/components/parameters/user_genderParam'
-        - $ref: '#/components/parameters/user_dobParam'
-        - $ref: '#/components/parameters/user_emailParam'
-        - $ref: '#/components/parameters/user_addressParam'
-        - $ref: '#/components/parameters/user_cellphoneParam'
-        - $ref: '#/components/parameters/user_cityIdParam'
-        - $ref: '#/components/parameters/user_stateIdParam'
-        - $ref: '#/components/parameters/user_countryIdParam'
-      x-swagger-router-controller: 'Users' 
+      x-swagger-router-controller: 'States'
+  '/states/{stateId}/cities':
+    get:
+      tags:
+        - States
+      description: Returns all cities by stateId
+      operationId: getCitiesByStateId
+      responses:
+        '200':
+          description: A list of cities.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/City'
+      parameters:
+        - in: path
+          name: stateId
+          description: state's id
+          required: true
+          schema:
+            type: number
+      x-swagger-router-controller: 'States' 
 components:
   schemas:
     User:
@@ -332,6 +381,8 @@ components:
           type: number
           example: 1
     City:
+      type: object
+    State:
       type: object
   parameters:
     user_idParam:
